--- a/app/about.html
+++ b/app/about.html
@@ -3,106 +3,99 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <title>Personal Portfolio Webpage -- ABOUT</title>
+    <title>My Web Development Projects</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <nav class="navbar" id="navbar">
-        <ul>
-          <li><a href="#welcome-section">About</a></li>
-          <li><a href="#projects">Work</a></li>
-          <li><a href="/about">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="mobile-menu">
-        <div class="mobile-menu__middle"></div>
-      </div>
-    </header>
-    <main>
-      <section class="section welcome-section" id="welcome-section">
-        <div class="centered-content">
-          <h1 class="section__title section__title--dark">Hey I am Kajen</h1>
-          <p class="section__subtitle">a web developer</p>
+    <div class="main-container">
+      <header>
+        <nav class="navbar" id="navbar">
+          <ul>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/projects.html">Work</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="mobile-menu">
+          <div class="mobile-menu__middle"></div>
         </div>
-      </section>
-      <section class="projects-section" id="projects">
-        <h2 class="section__title section__title--underline"># Projects</h2>
-        <div class="projects-section__projects" id="projects__sub">
-          <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">
-              <img width="400" src="https://th.bing.com/th/id/R.c5d772339679965c1ee67cf4c409e1bc?rik=%2fUQK1YwX6fX%2fMQ&pid=ImgRaw&r=0" alt="a pen of my tribute page to Dr. Norman Borlaug" />
-              <span><</span>
-              <p class="project-tile__text" style="display: inline-block">Tribute Page</p>
-              <span>/></span>
-            </a>
+      </header>
+      <main class="main-container__content">
+        <section class="section welcome-section" id="welcome-section">
+          <div class="centered-content">
+            <h1 class="section__title section__title--dark">About Me</h1>
+            <p class="section__subtitle">Web Development</p>
           </div>
-          <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">
-              <img width="400" src="https://th.bing.com/th/id/R.c5d772339679965c1ee67cf4c409e1bc?rik=%2fUQK1YwX6fX%2fMQ&pid=ImgRaw&r=0" alt="a pen of my tribute page to Dr. Norman Borlaug" />
-              <span><</span>
-              <p class="project-tile__text" style="display: inline-block">Tribute Page</p>
-              <span>/></span>
-            </a>
+        </section>
+        <section class="section section__about" id="about-projects">
+          <div class="wrapper">
+            <div>
+              <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">Introduction</h2>
+              <p class="general-copy general-copy--paragraph-two-col">
+               Hi, nice to meet you!  I'm Kajen, a web developer and digital marketer based in Toronto, Canada.  I live with my family, siblings and pet cat ("Orange");  I love to play video games and biking the trails around my place in my off time.  
+              </p>
+            </div>
+            <div>
+              <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">My Journey</h2>
+              <p class="general-copy general-copy--paragraph-two-col">
+                I have always loved building things since a young age, whether it was putting together jigsaw puzzles or building lego sets or in my teenage years when I started to build computers.  I have always loved creating and building things, to see things come to life.  In school I didn't really understand what I wanted to do and didn't reflect on what I enjoyed doing so I ended up going into a program I wasn't passionate about.  At the same time, I started to learn a bit of coding here and there and eventually got into web development.
+              </p>
+            </div>
+            <div>
+              <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">Skills and Expertise</h2>
+              <p class="general-copy general-copy--paragraph-two-col">
+                Since I discovered coding and web development, I've built my skills in HTML, CSS and JavaScript, as well as various other tools and frameworks, including wordpress and react.  I've also become proficient in using modern tools like Git, webpack and methodologies like BEM.  I strive to create beautiful and functional websites and applications.  In addition, I also have a background in digital marketing.  I understand how important it is to create a well designed website that customers want to visit and engage with, to help with the growth of business.  I want to make websites that are not only beautiful, but those that also align with marketing and business objectives.  There is a saying, "don't miss the forest for the trees", and I honestly believe this is important to keep in mind, not just in work but also in life.  Just like as a kid who was putting together puzzle pieces and lego blocks, my career and life has kind of ended up the same way, and I'm beginning to see the bigger picture of where I want my life to go! 
+              </p>
+            </div>
+            <div>
+              <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">My Values</h2>
+              <p class="general-copy general-copy--paragraph-two-col">
+                I have many different values.<br/><br/>  In terms of life, I want to make the world a better place, even though sometimes it might feel difficult or impossible to do so.  I'm a disciple of hard work, effort and discipline, but most importantly I believe that people should strive to find their happiness.<br/>  
+                
+                In terms of work, I'm a strong believer in the power of continuous learning, staying up to date with the latest technology and trends.  I love to work together in teams and collaborating to make truly amazing things that I can be proud of.
+              </p>
+            </div>
+            <div>
+              <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">My Work</h2>
+              <p class="general-copy general-copy--paragraph-two-col">
+                I invite you to browse through my projects to get a sense of my work. Each project showcases a different aspect of my skills and abilities.
+              </p>
+            </div>
           </div>
-          <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">
-              <img width="400" src="https://th.bing.com/th/id/R.c5d772339679965c1ee67cf4c409e1bc?rik=%2fUQK1YwX6fX%2fMQ&pid=ImgRaw&r=0" alt="a pen of my tribute page to Dr. Norman Borlaug" />
-              <span><</span>
-              <p class="project-tile__text" style="display: inline-block">Tribute Page</p>
-              <span>/></span>
-            </a>
-          </div>
-          <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">
-              <img width="400" src="https://th.bing.com/th/id/R.c5d772339679965c1ee67cf4c409e1bc?rik=%2fUQK1YwX6fX%2fMQ&pid=ImgRaw&r=0" alt="a pen of my tribute page to Dr. Norman Borlaug" />
-              <span><</span>
-              <p class="project-tile__text" style="display: inline-block">Tribute Page</p>
-              <span>/></span>
-            </a>
-          </div>
-          <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">
-              <img width="400" src="https://th.bing.com/th/id/R.c5d772339679965c1ee67cf4c409e1bc?rik=%2fUQK1YwX6fX%2fMQ&pid=ImgRaw&r=0" alt="a pen of my tribute page to Dr. Norman Borlaug" />
-              <span><</span>
-              <p class="project-tile__text" style="display: inline-block">Tribute Page</p>
-              <span>/></span>
-            </a>
-          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__top">
+          <h2 class="section__title">Lets work together...</h2>
+          <p class="section__subtitle section__subtitle--small">
+            How do you take your <span class="section__subtitle--coffee">coffee?</span>
+            <i class="fas fa-coffee" style="position: relative;">
+              <i class="fas fa-cloud" style="position: absolute; font-size: 0.5em; top: -1em; left: 1.0em; opacity: 0.15; transform: skew(-40deg) scaleY(1.7) scaleX(0.9) ;"></i>
+            </i>
+          </p>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="footer__top">
-        <h2 class="section__title">Lets work together...</h2>
-        <p class="section__subtitle section__subtitle--small">
-          How do you take your <span class="section__subtitle--coffee">coffee?</span>
-          <i class="fas fa-coffee" style="position: relative;">
-            <i class="fas fa-cloud" style="position: absolute; font-size: 0.5em; top: -1em; left: 1.0em; opacity: 0.15; transform: skew(-40deg) scaleY(1.7) scaleX(0.9) ;"></i>
-          </i>
-        </p>
-      </div>
-      <div class="footer__bottom">
-        <div class="social_media" id="profile-link">
-          <a href="" target="_blank">
-            <i class="fab fa-facebook-square"></i>
-            Facebook
-          </a>
-          <a href="" target="_blank">
-            <i class="fab fa-github"></i>
-            Github
-          </a>
-          <a href="" target="_blank">
-            <i class="fab fa-twitter"></i>
-            Twitter
-          </a>
+        <div class="footer__bottom">
+          <div class="social_media" id="profile-link">
+            <a href="" target="_blank">
+              <i class="fab fa-facebook-square"></i>
+              Facebook
+            </a>
+            <a href="" target="_blank">
+              <i class="fab fa-github"></i>
+              Github
+            </a>
+            <a href="" target="_blank">
+              <i class="fab fa-twitter"></i>
+              Twitter
+            </a>
+          </div>
+          <hr class="footer__bottom-line" />
+          <p class="footer__text">**This is a work in progress portfolio.<br />© design provided by FreeCodeCamp, built by Kajen</p>
         </div>
-        <hr class="footer__bottom-line" />
-        <p class="footer__text">**This is a work in progress portfolio.<br />© design provided by FreeCodeCamp, built by Kajen</p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
