final touches to portfolio page

--- a/app/contact.html
+++ b/app/contact.html
@@ -14,10 +14,10 @@
       <header>
         <nav class="navbar" id="navbar">
           <ul>
-            <li><a href="#welcome-section">About</a></li>
-            <li><a href="#projects">Work</a></li>
-            <li><a href="/about">Contact</a></li>
-            
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/projects.html">Work</a></li>
+            <li><a href="/contact.html">Contact</a></li>
           </ul>
         </nav>
         <div class="mobile-menu">
@@ -25,9 +25,9 @@
         </div>
       </header>
       <main class="main-container__content">
-        <section class="section welcome-section" id="welcome-section">
+        <section class="section welcome-section welcome-section--contact" id="welcome-section">
           <div class="centered-content">
-            <h1 class="section__title section__title--dark">Contact</h1>
+            <h1 class="section__title section__title--light">Contact</h1>
             <p class="section__subtitle">Get in touch</p>
           </div>
         </section>
