--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
       <header>
         <nav class="navbar" id="navbar">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/projects.html">Work</a></li>
             <li><a href="/contact.html">Contact</a></li>
@@ -27,7 +28,7 @@
         <section class="section welcome-section" id="welcome-section">
           <div class="centered-content">
             <h1 class="section__title section__title--dark">Hey I am Kajen</h1>
-            <p class="section__subtitle">a web developer</p>
+            <p class="section__subtitle section__subtitle--light">a web developer & <br />digital marketer</p>
           </div>
         </section>
         <section class="projects-section" id="projects">
@@ -55,7 +56,7 @@
       </main>
       <footer class="footer">
         <div class="footer__top">
-          <h2 class="section__title">Lets work together...</h2>
+          <h2 class="section__title section__title--light">Lets work together...</h2>
           <p class="section__subtitle section__subtitle--small">
             How do you take your <span class="section__subtitle--coffee">coffee?</span>
             <i class="fas fa-coffee" style="position: relative;">
@@ -65,21 +66,21 @@
         </div>
         <div class="footer__bottom">
           <div class="social_media" id="profile-link">
-            <a href="" target="_blank">
+            <!--<a href="" target="_blank">
               <i class="fab fa-facebook-square"></i>
               Facebook
-            </a>
-            <a href="" target="_blank">
+            </a> -->
+            <a href="https://github.com/KajenKirubah" target="_blank">
               <i class="fab fa-github"></i>
               Github
             </a>
-            <a href="" target="_blank">
+            <!--<a href="" target="_blank">
               <i class="fab fa-twitter"></i>
               Twitter
-            </a>
+            </a> -->
           </div>
           <hr class="footer__bottom-line" />
-          <p class="footer__text">**This is a work in progress portfolio.<br />© design provided by FreeCodeCamp, built by Kajen</p>
+          <p class="footer__text">Portfolio actively under development. Stay tuned for updates!<br />Coded with 💻 by Kajen.</p>
         </div>
       </footer>
     </div>
