--- a/app/about.html
+++ b/app/about.html
@@ -14,6 +14,7 @@
       <header>
         <nav class="navbar" id="navbar">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/projects.html">Work</a></li>
             <li><a href="/contact.html">Contact</a></li>
@@ -24,10 +25,10 @@
         </div>
       </header>
       <main class="main-container__content">
-        <section class="section welcome-section" id="welcome-section">
+        <section class="section welcome-section welcome-section--about" id="welcome-section">
           <div class="centered-content">
-            <h1 class="section__title section__title--dark">About Me</h1>
-            <p class="section__subtitle">Web Development</p>
+            <h1 class="section__title section__title--light">About Me</h1>
+            <p class="section__subtitle section__subtitle--light">web developer & <br />digital marketer</p>
           </div>
         </section>
         <section class="section section__about" id="about-projects">
@@ -47,7 +48,7 @@
             <div>
               <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">Skills and Expertise</h2>
               <p class="general-copy general-copy--paragraph-two-col">
-                Since I discovered coding and web development, I've built my skills in HTML, CSS and JavaScript, as well as various other tools and frameworks, including wordpress and react.  I've also become proficient in using modern tools like Git, webpack and methodologies like BEM.  I strive to create beautiful and functional websites and applications.  In addition, I also have a background in digital marketing.  I understand how important it is to create a well designed website that customers want to visit and engage with, to help with the growth of business.  I want to make websites that are not only beautiful, but those that also align with marketing and business objectives.  There is a saying, "don't miss the forest for the trees", and I honestly believe this is important to keep in mind, not just in work but also in life.  Just like as a kid who was putting together puzzle pieces and lego blocks, my career and life has kind of ended up the same way, and I'm beginning to see the bigger picture of where I want my life to go! 
+                Since I discovered coding and web development, I've built my skills in HTML, CSS and JavaScript, as well as various other tools and frameworks, including wordpress and react.  I've also become proficient in using modern tools like Git, webpack and methodologies like BEM.  I strive to create beautiful and functional websites and applications.  In addition, I also have a background in digital marketing.  I understand how important it is to create a well designed website that customers want to visit and engage with, to help with the growth of business.  I want to make websites that are not only beautiful, but those that also align with marketing and business objectives.  There is a saying, "don't miss the forest for the trees", and I honestly believe this is important to keep in mind, not just in work but also in life. 
               </p>
             </div>
             <div>
@@ -61,7 +62,7 @@
             <div>
               <h2 class="section__title section__title--dark section__title--about section__title--margin-t-large">My Work</h2>
               <p class="general-copy general-copy--paragraph-two-col">
-                I invite you to browse through my projects to get a sense of my work. Each project showcases a different aspect of my skills and abilities.
+                I invite you to browse through my <a href="/projects.html">projects</a> to get a sense of my work. Each project showcases a different aspect of my skills and abilities.
               </p>
             </div>
           </div>
