--- a/app/projects.html
+++ b/app/projects.html
@@ -14,6 +14,7 @@
       <header>
         <nav class="navbar" id="navbar">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/projects.html">Work</a></li>
             <li><a href="/contact.html">Contact</a></li>
@@ -24,9 +25,9 @@
         </div>
       </header>
       <main class="main-container__content">
-        <section class="section welcome-section" id="welcome-section">
+        <section class="section welcome-section welcome-section--projects" id="welcome-section">
           <div class="centered-content">
-            <h1 class="section__title section__title--dark">Projects</h1>
+            <h1 class="section__title section__title--light">Projects</h1>
             <p class="section__subtitle">Web Development</p>
           </div>
         </section>
