added back the trailing / to the publicPath

--- a/app/project-template.html
+++ b/app/project-template.html
@@ -72,7 +72,7 @@
             </a>
           </div>
           <hr class="footer__bottom-line" />
-          <p class="footer__text">**This is a work in progress portfolio.<br />© design provided by FreeCodeCamp, built by Kajen</p>
+          <p class="footer__text">Portfolio actively under development. Stay tuned for updates!<br />Coded with 💻 by Kajen.</p>
         </div>
       </footer>
     </div>
