netlify form handling

--- a/app/contact.html
+++ b/app/contact.html
@@ -33,22 +33,22 @@
         </section>
         <section class="section section__contact" id="about-projects">
           <div class="wrapper">
-            <form class="form" action="">
+            <form class="form" name="contact" data-netlify="true">
               <fieldset class="form__group">
                 <div class="form__field">
-                  <label for="name">Name: </label><input type="text" id="name">
+                  <label for="name">Name: </label><input type="text" name="name" id="name">
                 </div>
                 <div class="form__field">
-                  <label for="eadd">Email: </label><input type="email" id="eadd">
+                  <label for="eadd">Email: </label><input type="email" name="email" id="eadd">
                 </div>
                 <div class="form__field">
-                  <label for="subject">Subject: </label><input type="text" id="subject">
+                  <label for="subject">Subject: </label><input type="text" name="subject" id="subject">
                 </div>
                 <div class="form__field">
                   <label for="message">Message: </label><textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </div>
               </fieldset>
-              <a href="/" class="cta-button" type="submit">Submit</a>
+              <button class="cta-button" type="submit">Submit</button>
             </form>
           </div>
         </section>
