fixed footer and updated footer with linkedin, updated projects section by updating json

--- a/app/projects.html
+++ b/app/projects.html
@@ -90,18 +90,22 @@
         </div>
         <div class="footer__bottom">
           <div class="social_media" id="profile-link">
-            <a href="" target="_blank">
+            <!--<a href="" target="_blank">
               <i class="fab fa-facebook-square"></i>
               Facebook
-            </a>
-            <a href="" target="_blank">
+            </a> -->
+            <a href="https://github.com/KajenKirubah" target="_blank">
               <i class="fab fa-github"></i>
               Github
             </a>
-            <a href="" target="_blank">
+            <a href="https://www.linkedin.com/in/kajen-kirubah-792a608a" target="_blank">
+              <i class="fab fa-linkedin"></i>
+              LinkedIn
+          </a>
+            <!--<a href="" target="_blank">
               <i class="fab fa-twitter"></i>
               Twitter
-            </a>
+            </a> -->
           </div>
           <hr class="footer__bottom-line" />
           <p class="footer__text">Portfolio actively under development. Stay tuned for updates!<br />Coded with 💻 by Kajen.</p>
