--- a/app/about.html
+++ b/app/about.html
@@ -70,7 +70,7 @@
       </main>
       <footer class="footer">
         <div class="footer__top">
-          <h2 class="section__title">Lets work together...</h2>
+          <h2 class="section__title section__title--light">Lets work together...</h2>
           <p class="section__subtitle section__subtitle--small">
             How do you take your <span class="section__subtitle--coffee">coffee?</span>
             <i class="fas fa-coffee" style="position: relative;">
@@ -80,18 +80,22 @@
         </div>
         <div class="footer__bottom">
           <div class="social_media" id="profile-link">
-            <a href="" target="_blank">
+            <!--<a href="" target="_blank">
               <i class="fab fa-facebook-square"></i>
               Facebook
-            </a>
-            <a href="" target="_blank">
+            </a> -->
+            <a href="https://github.com/KajenKirubah" target="_blank">
               <i class="fab fa-github"></i>
               Github
             </a>
-            <a href="" target="_blank">
+            <a href="https://www.linkedin.com/in/kajen-kirubah-792a608a" target="_blank">
+              <i class="fab fa-linkedin"></i>
+              LinkedIn
+          </a>
+            <!--<a href="" target="_blank">
               <i class="fab fa-twitter"></i>
               Twitter
-            </a>
+            </a> -->
           </div>
           <hr class="footer__bottom-line" />
           <p class="footer__text">Portfolio actively under development. Stay tuned for updates!<br />Coded with 💻 by Kajen.</p>
