--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,10 @@
               <i class="fab fa-github"></i>
               Github
             </a>
+            <a href="https://www.linkedin.com/in/kajen-kirubah-792a608a" target="_blank">
+              <i class="fab fa-linkedin"></i>
+              LinkedIn
+          </a>
             <!--<a href="" target="_blank">
               <i class="fab fa-twitter"></i>
               Twitter
