--- a/app/contact.html
+++ b/app/contact.html
@@ -55,7 +55,7 @@
       </main>
       <footer class="footer">
         <div class="footer__top">
-          <h2 class="section__title">Lets work together...</h2>
+          <h2 class="section__title section__title--light">Lets work together...</h2>
           <p class="section__subtitle section__subtitle--small">
             How do you take your <span class="section__subtitle--coffee">coffee?</span>
             <i class="fas fa-coffee" style="position: relative;">
